fixing spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -458,7 +458,7 @@ input[type="checkbox"] ~ ul {
 }
 .social {
   padding-top: 12px;
-  word-spacing: 20px;
+  word-spacing: 12px;
 }
 .social h4 > a {
   color: #000000;
